--- a/index.html
+++ b/index.html
@@ -223,13 +223,10 @@ var STYLE_PREFIX = 'wsite';
 
 
 <p>
-<font size="5"><A HREF = "https://msveiven.github.io/ProtParserWiki4/Scanners">Scanners</A></font>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/.git">.git</A></font>
  </p> 
 <p>
-<font size="5"><A HREF = "https://msveiven.github.icd/ProtParserWiki4/Scanners">Scanners</A></font>
- </p> 
-<p>
-<font size="5"><A HREF = "https://msveiven.github.icd/ProtParserWiki4/Scanners">Scanners</A></font>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners">Scanners</A></font>
  </p> 
 </body>
 </html>
