--- a/Scanners/test1/abdomen/index.html
+++ b/Scanners/test1/abdomen/index.html
@@ -7,5 +7,11 @@
 <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test1/abdomen/HYPER_ACUTE_STROKE.htm">HYPER ACUTE STROKE</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/abdomen/B2_-_BRN_W_WO_NON-TUMOR_LESION.htm">B2 - BRN W WO NON-TUMOR LESION</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/abdomen/HYPER_ACUTE_STROKE.htm">HYPER ACUTE STROKE</A></font>
+ </p> 
 </body>
 </html>
