--- a/Scanners/test2/body/index.html
+++ b/Scanners/test2/body/index.html
@@ -4,5 +4,8 @@
   <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test2/body/NON_HYPER_ACUTE_STROKE.htm">NON HYPER ACUTE STROKE</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test2/body/NON_HYPER_ACUTE_STROKE.htm">NON HYPER ACUTE STROKE</A></font>
+ </p> 
 </body>
 </html>
