--- a/index.html
+++ b/index.html
@@ -228,5 +228,11 @@ var STYLE_PREFIX = 'wsite';
 <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners">Scanners</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/.git">.git</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners">Scanners</A></font>
+ </p> 
 </body>
 </html>
