--- a/Scanners/test1/body/index.html
+++ b/Scanners/test1/body/index.html
@@ -4,5 +4,8 @@
   <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test1/body/HYPER_ACUTE_STROKE.htm">HYPER ACUTE STROKE</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/body/HYPER_ACUTE_STROKE.htm">HYPER ACUTE STROKE</A></font>
+ </p> 
 </body>
 </html>
