--- a/Scanners/test1/index.html
+++ b/Scanners/test1/index.html
@@ -13,5 +13,17 @@
 <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test1/torso">torso</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/abdomen">abdomen</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/body">body</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/neuro">neuro</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test1/torso">torso</A></font>
+ </p> 
 </body>
 </html>
