--- a/Scanners/test2/index.html
+++ b/Scanners/test2/index.html
@@ -10,5 +10,14 @@
 <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test2/neuro">neuro</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test2/abdomen">abdomen</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test2/body">body</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test2/neuro">neuro</A></font>
+ </p> 
 </body>
 </html>
