--- a/Scanners/test2/neuro/index.html
+++ b/Scanners/test2/neuro/index.html
@@ -7,5 +7,11 @@
 <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test2/neuro/NON_HYPER_ACUTE_STROKE.htm">NON HYPER ACUTE STROKE</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test2/neuro/B5_-_BRN_MS.htm">B5 - BRN MS</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test2/neuro/NON_HYPER_ACUTE_STROKE.htm">NON HYPER ACUTE STROKE</A></font>
+ </p> 
 </body>
 </html>
