--- a/Scanners/test3/index.html
+++ b/Scanners/test3/index.html
@@ -7,5 +7,11 @@
 <p>
 <font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/ProtParserTest2/Scanners/test3/neuro">neuro</A></font>
  </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test3/body">body</A></font>
+ </p> 
+<p>
+<font size="5"><A HREF = "https://msveiven.github.io/ProtParserTest2/Scanners/test3/neuro">neuro</A></font>
+ </p> 
 </body>
 </html>
